--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,14 @@
   display: inline-block !important;
   padding: 0 !important;
 }
+.or_btn{
+  display: block;
+  background-color: bisque;
+  font-size: 20px;
+  color: black;
+  text-align: center;
+  margin: 15px 0;
+}
+.google{
+  font-size: 20px;
+}
